--- a/secciones.html
+++ b/secciones.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-	<header></header>
-	<footer></footer>
+	<header>Soy un header</header>
+	<footer>Soy un footer</footer>
   </body>
 </html>
