Puse una carita feliz en el footer

--- a/secciones.html
+++ b/secciones.html
@@ -6,6 +6,6 @@
   </head>
   <body>
 	<header>Soy un header</header>
-	<footer>Soy un footer</footer>
+	<footer>Soy un footer :)</footer>
   </body>
 </html>
